fixed hollywood novo and elysian fields navigation selection color being incorrect. (e.g. black not fitting)

--- a/default-themes/hollywood-novo/hollywood-novo.scss
+++ b/default-themes/hollywood-novo/hollywood-novo.scss
@@ -233,3 +233,7 @@ body {
         box-sizing: border-box;
     }
 }
+
+#nav_bar.vertical .nav_entry.selected {
+    background-color: adjust-color($ui-bg-color, $lightness: 5%);
+}
